# deepfx-alpha-lab

./: .env.example  .gitignore  Justfile  README.md  pyproject.toml
docs/: labeling.md
src/deepfx_alpha_lab/: __init__.py
src/deepfx_alpha_lab/data/: clickhouse.py
src/deepfx_alpha_lab/kronos/: __init__.py  baseline.py  dataset.py  encoder.py
src/deepfx_alpha_lab/labeling/: __init__.py  barriers.py  cusum.py  ohlc_barriers.py  triple_barrier.py  volatility.py
studies/afml/ch03-labeling/: README.md
studies/afml/ch03-labeling/scripts/: 01_triple_barrier_xauusd_m1.py  02_vertical_barrier_zero.py  03_ma_crossover_meta_labeling.py  04_monthly_diagnostics.py  05_walk_forward_validation.py  06_triple_barrier_sweep.py  07_mtf_barrier_sweep.py  08_mtf_ohlc_barrier_sweep.py  09_kronos_tb_labeler_dataset.py  10_kronos_tb_labeler_baseline.py
tests/: test_kronos_labeler.py  test_triple_barrier.py
