[project]
name = "deepfx-alpha-lab"
version = "0.1.0"
description = "Research workflows for FX alpha labeling and validation."
requires-python = ">=3.11"
dependencies = [
    "clickhouse-connect>=0.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.5",
]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deepfx_alpha_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
